--- a/assessment.html
+++ b/assessment.html
@@ -2,13 +2,13 @@
 <head>
     <title>Finding Dory</title>
 
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8">
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 	<body>
-	 <h1></i><u>Finding Dory!</u></i></h1>
-	 <h2><i>An interesting story about Dory<i>...</h2>
+	 <h1><i><u>Finding Dory!</u></i></h1>
+	 <h2><i>An interesting story about Dory</i>...</h2>
 	 <iframe width="500" height="300" src="https://www.youtube.com/embed/jP9RvL9acHU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen align="right"></iframe>
 	 <img src="mmmm.jpg" width="400" height="300">
 	 <h2>Plot</h2>
@@ -68,7 +68,8 @@
 	 <form action="https://en.wikipedia.org/wiki/Finding_Dory">
 	 <p>Want to know more?</p>
 	 <p><input type="submit" value="Click me"></p>
-	 <hr>
+		</form>
+		 <hr>
 	</body>
 
 </html>
